--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,1 @@
-<!doctype HTML>
-<html>
-    <head>
-            <link rel="stylesheet" type="text/css" href="controls.css">
-    </head>
-    <body>
-        <div class="arrowhead" id="uparrow"></div>
-        <div class="arrowhead" id="downarrow"></div>
-        <div class="arrowhead" id="leftarrow"></div>
-        <div class="arrowhead" id="rightarrow"></div>
-        <script src="controls.js">
-        </script>
-    </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.d9a2c4fd.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.2260a9f8.js"></script></body></html>
